--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "description": "Collateralized Debt Position Portal for creating and managing Single-Collateral Dai CDPs in the Dai Stablecoin System.",
   "private": true,
-  "homepage": "https://cdp.makerdao.com",
+  "homepage": ".",
   "scripts": {
     "build-css": "node-sass-chokidar src/scss/ -o src/scss/ --recursive",
     "watch-css": "npm run build-css && node-sass-chokidar src/scss/ -o src/scss/ --recursive --watch",
@@ -65,6 +65,7 @@
   "dependencies": {
     "@ledgerhq/hw-app-eth": "^4.7.3",
     "@ledgerhq/hw-transport-u2f": "^4.7.3",
+    "@mainframe/sdk": "^0.2.1",
     "axios": "^0.18.0",
     "bignumber.js": "^7.2.1",
     "create-react-class": "^15.5.3",
